force-app/main/default/objects/ssot__Conversation__dlm/fields/ssot__Conversation_CreatedById_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Conversation_CreatedById_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversation_CreatedById_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>Conversation_CreatedById_map_User_Id_N_1</relationshipLabel>
    <relationshipName>Conversation_CreatedById_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>