force-app/main/default/objects/ssot__Conversation__dlm/fields/ssot__MessageDeliveryShortCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessageDeliveryShortCodeText__c</fullName>
    <label>Message Delivery Short Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessageDeliveryShortCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>