force-app/main/default/objects/ssot__Conversation__dlm/fields/ssot__rel_1702009512898_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009512898_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversation_LastModifiedById_map_Us_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>Conversation_LastModifiedById_map_Us_rel</relationshipLabel>
    <relationshipName>rel_1702009512898_end</relationshipName>
    <type>Lookup</type>
</CustomField>